8271531: [lworld] Implicit null check optimization does not hoist constant load input